# MapReduceProject

./: CMakeLists.txt  README.md  input.txt  main.cpp  map.cpp  mapp.cpp  prime_main.cpp  project.cpp  reduce.cpp  result.txt
cpp/: map_functions.cpp
headers/: map.h  map_functions.h  thread_safety_queue.h
txt/: output.txt
